--- a/Templates/base.html
+++ b/Templates/base.html
@@ -3,8 +3,9 @@
 <head>
 
    <!-- Bootstrap CDN -->
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
    
    <!-- Font Awesome Kit -->
    <script src="https://kit.fontawesome.com/4f671d628b.js" crossorigin="anonymous"></script>
@@ -20,14 +21,16 @@
 
 <body>
     <header>
-        <div class="container-fluid">
+        <div class="container-fluid navbar-container p-0">
             <nav class="navbar navbar-expand-lg navbar-light px-4 py-3">
-                <div class="container-fluid d-flex justify-content-between">
+                <div class="container-fluid d-flex p-0">
                     <!-- Logo and Brand Name combined in one link -->
-                    <a class="navbar-brand d-flex align-items-center" href="/">
-                        <img src="{{ url_for('static', filename='images/logos/sccm_logo.png') }}" width="100" height="95" alt="Company Logo, SCCM">
-                        <div class="px-3"><h4 class="school-name">Soundscapes Conservatory<br>of Music</h4></div>
-                    </a>
+                    <div class="navbar-brand d-flex align-items-center">
+                        <a href="/"><img src="{{ url_for('static', filename='images/logos/sccm_logo.png') }}" alt="Company Logo, SCCM" class="img-fluid"></a>
+                    </div>
+                    <div class="navbar-brand d-flex align-items-center">
+                        <div><h4 class="school-name">Soundscapes Conservatory <span>of Music</span></h4></div>
+                    </div>
     
                     <!-- Burger Button: Visible on xs to md screens -->  
                     <div class="d-lg-none">
@@ -39,10 +42,10 @@
                     <!-- Navbar Links -->
                     <div class="collapse navbar-collapse" id="navbarNavDropdown">
                         <ul class="navbar-nav ms-auto">
-                            <li class="nav-item">
+                            <li class="nav-item px-2">
                                 <a class="nav-link" href="/">Home</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item px-2">
                                 <a class="nav-link" href="/about">About</a>
                             </li>
                             <li class="nav-item dropdown">
@@ -54,24 +57,19 @@
                                     <a class="dropdown-item" href="/programs#group-instruction">Group Instruction</a>
                                 </div>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item px-2">
                                 <a class="nav-link" href="/gallery">Gallery</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item px-2">
                                 <a class="nav-link" href="/contact">Contact</a>
                             </li>
-                            <!-- Social media icons -->
-                            <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/"><i class="fa-brands fa-square-facebook fa-md" style="color: #000000;"></i></a></li>
-                            <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/"><i class="fa-brands fa-instagram fa-md" style="color: #000000;"></i></a></li>
-                            <li class="nav-item"><a class="nav-link" href="https://twitter.com/"><i class="fa-brands fa-twitter fa-md" style="color: #000000;"></i></a></li>
-                            <li class="nav-item"><a class="nav-link" href="https://www.tiktok.com/"><i class="fa-brands fa-tiktok fa-md" style="color: #000000;"></i></a></li>
                         </ul>
                     </div>
                 </div>
             </nav>
         </div>
     </header>
-</body>
+
 
     <!-- Modal for Mobile Navigation -->
 
@@ -113,6 +111,8 @@
 
     {% block content %}
     {% endblock %}
+
+
 
     <footer class="bg-dark text-light pt-4 pb-4" id="footer">
             <div class="container">
@@ -157,7 +157,6 @@
             </div>
     </footer>
         
-    
 
     <!-- Bootstrap Bundle JS and jQuery Library -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kQtW33rZJAHj6eD6Hupl5tVIyWIOeFb2A4L5kYmE6p7iTxh4sUpb8dYflE9lotmD" crossorigin="anonymous"></script>
