--- a/Templates/contact.html
+++ b/Templates/contact.html
@@ -4,12 +4,16 @@
 
 <section class="py-5" id="contact-us"> 
     <div class="container">
+        <h2 class="custom-light-text">Contact Us</h2>
         <div class="row">
             <div class="col-md-6 contact-text">
-                <p id="school-name">Soundscapes School of Music</p>
-                <p>50 School Lane Brooklyn, NY 11236</p>
-                <p>info@scsom.org</p>
-                <p>123-456-7890</p>
+                <p style="line-height: 2;"><span id="school-name">Soundscapes School of Music</span>
+                <br>
+                50 School Lane Brooklyn, NY 11236
+                <br>
+                info@scsom.org
+                <br>
+                123-456-7890</p>
             </div>
             <div class="col-md-6">
                 <form action="/contact" method="post" enctype="multipart/form-data" autocomplete="on">
@@ -36,7 +40,7 @@
                     </div>
                     <div class="form-group">
                         <textarea class="form-control" name="message" placeholder="Type your message here..." rows="4" required></textarea>
-                        <small class="form-text text-muted custom-light-text">We'll never share your personal information with anyone else.</small>
+                        <small class="form-text text-muted custom-light-text">We'll never share your personal information with anyone.</small>
                     </div>
                     <button type="submit" class="btn btn-primary custom-button-text my-3">Submit</button>
                     <div id="submitMessage" class="alert alert-success" style="display:none;">
