--- a/Templates/home.html
+++ b/Templates/home.html
@@ -7,35 +7,34 @@
         <source src="{{ url_for('static', filename='videos/woman-playing-violin.mp4') }}" type="video/mp4"/>
     </video>
         <div class="video-overlay d-flex justify-content-center align-items-center">
-            <div class="overlay-text-container">
-                <h1>Find Your Rhythm,</h1>
-                <h1>Discover Your Voice.</h1>
+            <div class="overlay-text-container text-white">
+                <h1>Find Your Rhythm,<br> Discover Your Voice.</h1>
                 <p>Passionate Advocate and Innovator in Music Education for 42 years.</p>
-                <div class="overlay-button-container my-3">
-                    <a href="contact"><button type="button" class="custom-button btn btn-lg custom-button-text">Try a Free Class Today</button></a>
+                <div class="overlay-button-container mt-2">
+                    <a href="contact"><button type="button" class="btn custom-button btn-lg custom-button-text">Try a Free Class Today</button></a>
                 </div>
             </div>
         </div> 
 </div>
 
 <!-- About Portion -->
-<div class="orange-background py-5 custom-text text-center">
+<div class="banner orange-background py-5 custom-text text-center">
     <h1 class="py-5 text-white">Why SCCM?</h1>
 </div>
 
 <div class="row justify-content-center align-items-center pastel-background">
-    <div class="col-lg-6 why-sscm-section position-relative p-0">
+    <div class="col-lg-6 why-sscm-section align-self-stretch position-relative p-0">
+        <img src="{{ url_for('static', filename='images/heroes/why-sccm.PNG') }}" class="img-fluid w-100 h-100" alt="Young girl sitting on a chair playing the violin." style="object-fit: cover;">
         <div class="sccm-text-overlay position-absolute align-items-center p-5">
             <h1 class="orange-headings pb-4">Cultivating Excellence</h1>
             <p class="px-5">Soundscapes Conservatory of Music has become a beacon of music education in Brooklyn since its establishment in 1981. Committed to excellence, SCCM offers high quality musical education with a blend of traditional and modern approaches for students of all levels and ages.</p>
-            <div class="overlay-button-container position-asbolute align-items-center mt-4">
+            <div class="overlay-button-container position-asbolute align-items-center mt-4 d-xs-none">
                 <a href="about"><button type="button" class="custom-button btn btn-lg custom-button-text">Read More</button></a>
             </div>
         </div>
-        <img src="{{ url_for('static', filename='images/heroes/why-sccm.PNG') }}" class="img-fluid w-100 h-100" alt="Young girl sitting on a chair playing the violin." style="object-fit: cover;">
     </div>
 
-    <div id="core-values" class="col-lg-6 p-5 align-self-start">
+    <div id="core-values" class="col-lg-6 p-5 align-self-stretch">
         <!-- Other texts -->
         <h1 class="text-center black-heading">Our Core Values</h1>
         <div class="pt-4">
@@ -59,48 +58,48 @@
 
 
 <!-- Testimonials Portion -->
-<div class="why-sccm orange-background py-5 custom-text text-center">
-    <h1 class="pt-5 text-white">Testimonials</h1>
+<div class="why-sccm orange-background pt-5 pb-2 custom-text text-center">
+    <h1 class="text-white">Testimonials</h1>
 </div>
 
-<div id="testimonials-carousel" class="carousel slide pb-5" data-bs-ride="carousel" data-bs-interval="5000">
+<div id="testimonials-carousel" class="carousel slide pb-3" data-bs-ride="carousel" data-bs-interval="5000">
     <div class="carousel-inner">
-        <div class="carousel-item active pb-5">
-            <div class="container">
+        <div class="carousel-item active">
+            <div class="container px-3">
                 <div class="row justify-content-center pb-5">
-                    <div class="col-md-8 text-center">
-                        <p class="lead black-heading">"SCCM is more than a music school; it's a nurturing community where my child has flourished. The instructors are incredibly supportive, and we've seen remarkable progress in both skill and confidence."</p>
-                        <div class="pt-5"><strong>- Kate G, parent</strong></div>
+                    <div class="col-md-10 text-center quote" id="testimonials-quote">
+                        <p class="lead black-heading">"SCCM is more than a music school; it's a nurturing community where my child has flourished. We've seen remarkable progress in both skill and confidence."</p>
+                        <div class="pt-3"><strong>- Kate G, parent</strong></div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="carousel-item pb-5">
+        <div class="carousel-item">
             <div class="container">
                 <div class="row justify-content-center pb-5">
-                    <div class="col-md-8 text-center">
+                    <div class="col-md-10 text-center quote" id="testimonials-quote">
                         <p class="lead black-heading">"As a student at SCCM, I've not only improved my technical skills but also discovered my own musical voice. The teachers are amazing, always encouraging creativity and individuality."</p>
-                        <div class="pt-5"><strong>- Emily J, student</strong></div>
+                        <div class="pt-3"><strong>- Emily J, student</strong></div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="carousel-item pb-5">
+        <div class="carousel-item">
             <div class="container">
                 <div class="row justify-content-center pb-5">
-                    <div class="col-md-8 text-center">
+                    <div class="col-md-10 text-center quote" id="testimonials-quote">
                         <p class="lead black-heading">"SCCM has been a vibrant addition to our Brooklyn neighborhood. Their concerts and events bring us all together, showcasing the incredible talents nurtured within their walls."</p>
-                        <div class="pt-5"><strong>- Leo T, community member</strong></div>
+                        <div class="pt-3"><strong>- Leo T, community member</strong></div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="carousel-item pb-5">
+        <div class="carousel-item">
             <div class="container">
                 <div class="row justify-content-center pb-5">
-                    <div class="col-md-8 text-center">
+                    <div class="col-md-10 text-center quote" id="testimonials-quote">
                         <p class="lead black-heading">"Soundscapes Conservatory was a transformative experience for me. The lessons I learned and the mentors I met have shaped my musical journey and opened doors I never imagined."</p>
-                        <div class="pt-5"><strong>- Nina P, SCCM alumna.</strong></div>
+                        <div class="pt-3 "><strong>- Nina P, SCCM alumna.</strong></div>
                     </div>
                 </div>
             </div>
