--- a/Templates/about.html
+++ b/Templates/about.html
@@ -47,16 +47,19 @@
 
 <section class="py-5" id="the-team">
     <div class="container">
+        
         <div class="row align-items-end">
              <!-- Center Text -->
-             <div class="col-md-12 col-lg-4 order-md-2 order-lg-2 align-self-center">
-                <h1 class="orange-headings text-center">Meet Our Team</h1>
+             <div class="staff-container d-flex">
+             <div class="col-md-12 col-lg-4 order-md-2 order-lg-2 align-self-center px-3">
+                <h1 class="orange-headings text-center pb-3">Meet Our Team</h1>
                 <p class="text-justify staff-text">
                     Our faculty is our pride, comprising highly qualified educators who hold degrees from some of the most prestigious institutions. Their expertise is matched by their dedication, as they inspire and guide students towards achieving their musical aspirations.
                 </p>
                 <p class="text-justify staff-text">
-                    Our students' success is showcased through various avenues, including bi-annual recitals, festivals, and art exhibitions. Participation in renowned events like NYSSMA festivals and ABRSM exams is encouraged; these highlight our students' progression and accomplishments under the instruction of our instructors. Recognition through certificates, medals, and trophies further motivates our students, while regular evaluations and report cards ensure transparent communication of progress with parents.
+                    Our students' success is showcased through bi-annual recitals, festivals, and art exhibitions. Participation in renowned events like NYSSMA festivals and ABRSM exams is encouraged, and students are recognized through certificates, medals, and trophies. Regular evaluations and report cards ensure transparent communication of progress with parents.
                 </p>
+                <div class="d-lg-none"><h4 class="black-heading text-center">Administration</h4></div>
             </div>
             <!-- First Portrait -->
             <div class="col-md-6 col-lg-4 order-md-2 order-lg-1 py-4">
@@ -66,31 +69,35 @@
                     <div class="pb-1 card-body text-center">
                       <h5 class="card-title">Dr. Elizabeth Nguyen</h5>
                       <p class="card-sub-title text-dark">President</p>
-                      <p class="card-text">An inspiring leader in music education, Dr. Nguyen has over two decades of experience. Her innovative initiatives in music pedagogy have won her the National Music Educators Award. Her Vietnamese heritage and international exposure bring a unique perspective to our administration.</p>
+                      <p class="card-text d-none d-lg-block">An inspiring leader in music education, Dr. Nguyen has over two decades of experience. Her innovative initiatives in music pedagogy have won her the National Music Educators Award. Her Vietnamese heritage and international exposure bring a unique perspective to our administration.</p>
+                      <p class="card-text d-lg-none">A leader in music education, Dr. Nguyen has over two decades of experience. Her innovative initiatives in music pedagogy have won her the National Music Educators Award.</p>
                     </div>
                   </div>
                 </div>
             </div> 
 
             <!-- Second Portrait -->
-            <div class="col-md-6 col-lg-4 col-sm-12 order-md-3 order-lg-3 pb-4">
+            <div class="col-md-6 col-lg-4 col-sm-12 order-md-3 order-lg-3 py-4">
                 <div class="card admin-member">
                     <img class="card-img-top" src="{{ url_for('static', filename='images/about-us/Feldman.JPG') }}" alt="Portrait of Dr. Steven Feldman, Vice President.">
                     <div class="py-0 card-body member-details" style="display:none;">
                       <div class="pb-1 card-body text-center">
                         <h5 class="card-title">Dr. Steve Feldman</h5>
                         <p class="card-sub-title text-dark">Vice President</p>
-                        <p class="card-text">Dr. Feldman is an esteemed figure in music production, with a career spanning 15 years and accolades including the Global Music Award. His expertise in merging classical traditions with modern technology has been pivotal in our school's success.</p>
-                      </div>
+                        <p class="card-text d-none d-lg-block">Dr. Feldman is an esteemed figure in music production, with a career spanning 15 years and accolades including the Global Music Award. His expertise in merging classical traditions with modern technology has been pivotal in our school's success.</p>
+                        <p class="card-text d-lg-none">Esteemed music producer and three time Global Music Award winner, Dr. Feldman is an expert at merging classical traditions with modern technology. His talents have been pivotal for our school's success.</p>
+                    </div>
                     </div>
                 </div>
+            </div>
             </div>
         </div> 
     </div> 
 
 <!--Rest of staff rows-->
     <div class="container py-3">
-        <div class="row row-cols-1 row-cols-xl-4 row-cols-lg-3 row-cols-md-2 g-4"> 
+        <div class="d-lg-none"><h4 class="black-heading text-center pb-4">Faculty Members</h4></div>
+        <div class="row row-cols-3 row-cols-xl-4 g-4"> 
             {% for member in team_members %}
             <div class="col px-0">
                 <div class="card h-100 team-member">
