--- a/Templates/base.html
+++ b/Templates/base.html
@@ -28,7 +28,7 @@
                     <div class="navbar-brand d-flex align-items-center">
                         <a href="/"><img src="{{ url_for('static', filename='images/logos/sccm_logo.png') }}" alt="Company Logo, SCCM" class="img-fluid"></a>
                     </div>
-                    <div class="navbar-brand d-flex align-items-center">
+                    <div class="navbar-brand d-flex align-items-center mx-0">
                         <div><h4 class="school-name">Soundscapes Conservatory <span>of Music</span></h4></div>
                     </div>
     
