--- a/Templates/base.html
+++ b/Templates/base.html
@@ -119,7 +119,7 @@
                 <div class="row">
                     <!-- Logo / Address -->
                     <div class="col-md-3 mb-3">
-                        <img src="{{ url_for('static', filename='images/logos/sccm_logo.png') }}" width="70" height="70" alt="Company Logo" class="footer-logo">
+                        <img src="{{ url_for('static', filename='images/logos/sccm_logo.png') }}" width="70" height="70" alt="Company Logo, SCCM" class="footer-logo">
                         <p class="mt-2">50 School Lane <br> Brooklyn, NY 11236</p>
                     </div>
         
