--- a/Templates/contact.html
+++ b/Templates/contact.html
@@ -61,7 +61,7 @@
 <section class="py-5 map-background" id="google-map">
     <div class="container">
         <div id="map-container-google-2" class="z-depth-1-half map-container">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3027.452669031138!2d-73.9084023554987!3d40.64195098248375!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25cc11583a335%3A0xe985207a5f56870f!2s50%20School%20Ln%2C%20Brooklyn%2C%20NY%2011236!5e0!3m2!1sen!2sus!4v1709074326009!5m2!1sen!2sus" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3027.452669031138!2d-73.9084023554987!3d40.64195098248375!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25cc11583a335%3A0xe985207a5f56870f!2s50%20School%20Ln%2C%20Brooklyn%2C%20NY%2011236!5e0!3m2!1sen!2sus!4v1709074326009!5m2!1sen!2sus" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" aria-hidden="true" tabindex="-1" title="Map showing the location of Soundscapes Conservatory of Music at 50 School Lane, Brooklyn, NY"></iframe>
         </div>
     </div>
 </section>
