--- a/static/CSS/styles.css
+++ b/static/CSS/styles.css
@@ -1,3 +1,16 @@
+/* FOR SCREEN READER HERO IMG ACESSIBILITY */
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    overflow: hidden;
+    clip: rect(0,0,0,0);
+    border: 0;
+}
+
+
 /* MEDIA QUERIES */
 
 @media (min-width: 992px) {
@@ -703,6 +716,11 @@
     border-radius: 50%;
     width: 1vw !important;
     height: 1vw !important;
+}
+
+#gallery p {
+    font-weight: bold;
+    color: black;
 }
 
 
