--- a/Templates/gallery.html
+++ b/Templates/gallery.html
@@ -2,12 +2,11 @@
 
 {% block content %}
 
-
 <header id="carousel-controls" class="hero-section carousel-hero-section bg-cover bg-no-repeat bg-center text-white d-flex justify-content-center align-items-center carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
     <div class="carousel-inner">
       {% for image in all_images %}
       <div class="carousel-item {% if loop.first %}active{% endif %}">
-          <img src="{{ url_for('static', filename=image) }}" class="d-block w-100" alt="Student and faculty gallery images throughout the years of SCCM.">
+          <img src="{{ url_for('static', filename=image) }}" class="d-block w-100">
       </div>
       {% endfor %}
         <!---OVERLAY GALLERY HEADING TEXT-->
@@ -40,8 +39,8 @@
   <div class="row row-cols-1 row-cols-md-3 g-4 text-center">
     {% for album in albums %}
     <div class="col">
-      <img src="{{ url_for('static', filename=album.cover_image) }}" alt="{{ album.name }}" data-bs-toggle="modal" data-bs-target="#album-modal-{{ loop.index }}" class="img-thumbnail clickable-element">
-      <p class="text-dark"> {{ album.name }}</p>
+      <img src="{{ url_for('static', filename=album.cover_image) }}" alt="{{ album.cover_alt }}" data-bs-toggle="modal" data-bs-target="#album-modal-{{ loop.index }}" class="img-thumbnail clickable-element">
+      <p class="mt-2"> {{ album.name }}</p>
     </div>
     {% endfor %}
   </div>
@@ -57,7 +56,7 @@
                     <div class="carousel-inner">
                       {% for image in album.images %}
                       <div class="carousel-item {% if loop.first %}active{% endif %}">
-                          <img src="{{ url_for('static', filename=image) }}" class="d-block w-100" alt="{{ album.name }}">
+                          <img src="{{ url_for('static', filename=image) }}" class="d-block w-100" alt="{{ image.alt }}">
                       </div>
                       {% endfor %}
                     </div>
