--- a/Templates/home.html
+++ b/Templates/home.html
@@ -8,10 +8,16 @@
     </video>
         <div class="video-overlay d-flex justify-content-center align-items-center">
             <div class="overlay-text-container text-white">
+                <span class="visually-hidden">Hero video showing a woman playing the violin, conveying the passion and dedication found at Soundscapes Conservatory of Music.</span>
                 <h1>Find Your Rhythm,<br> Discover Your Voice.</h1>
                 <p>Passionate Advocate and Innovator in Music Education for 42 years.</p>
                 <div class="overlay-button-container mt-2">
-                    <a href="contact"><button type="button" class="btn custom-button btn-lg custom-button-text">Try a Free Class Today</button></a>
+                    <a href="contact" 
+                        class="btn custom-button btn-lg custom-button-text"
+                        role="button" 
+                        aria-label="Navigate to contact page to try a free class at Soundscapes Conservatory of Music">
+                        Try a Free Class Today
+                    </a>
                 </div>
             </div>
         </div> 
@@ -24,12 +30,12 @@
 
 <div class="row justify-content-center align-items-center pastel-background">
     <div class="col-lg-6 why-sscm-section align-self-stretch position-relative p-0">
-        <img src="{{ url_for('static', filename='images/heroes/why-sccm.PNG') }}" class="img-fluid w-100 h-100" alt="Young girl sitting on a chair playing the violin." style="object-fit: cover;">
+        <img src="{{ url_for('static', filename='images/heroes/why-sccm.PNG') }}" class="img-fluid w-100 h-100" alt="A young girl with curly red hair, wearing a blue dress, intently plays a violin while seated on a wooden chair against a white background." style="object-fit: cover;">
         <div class="sccm-text-overlay position-absolute align-items-center p-5">
             <h1 class="orange-headings pb-4">Cultivating Excellence</h1>
             <p class="px-5">Soundscapes Conservatory of Music has become a beacon of music education in Brooklyn since its establishment in 1981. Committed to excellence, SCCM offers high quality musical education with a blend of traditional and modern approaches for students of all levels and ages.</p>
             <div class="overlay-button-container position-asbolute align-items-center mt-4 d-xs-none">
-                <a href="about"><button type="button" class="custom-button btn btn-lg custom-button-text">Read More</button></a>
+                <a href="about" class="btn custom-button btn-lg custom-button-text" role="button" aria-pressed="false">Read More</a>
             </div>
         </div>
     </div>
