--- a/Templates/programs.html
+++ b/Templates/programs.html
@@ -3,6 +3,7 @@
 {% block content %}
 
 <header class="programs-hero-section bg-cover bg-no-repeat bg-center text-white d-flex justify-content-center align-items-center" style="background-image: url('{{ url_for('static', filename='images/heroes/programs-hero.jpg') }}'); height: 75vh;">
+    <span class="visually-hidden">Enthusiastic young woman playing drums, illuminated by vibrant multicolored lights in a dynamic musical setting.</span>
     <div class="hero-text text-center">
         <h1 class="display-2">Programs</h1>
     </div>
@@ -37,7 +38,7 @@
                 <!-- Content for Group Instruction -->
                 <div class="row justify-content-center align-items-center bg-white {% if not loop.index is odd %} flex-lg-row-reverse {% endif %}">
                     <div class="col-lg-6 programs-image">
-                        <img src="{{ url_for('static', filename=program.image_file) }}" class="img-fluid" alt="{{ program.name }}">
+                        <img src="{{ url_for('static', filename=program.image_file) }}" class="img-fluid" alt="{{ program.image_description }}">
                     </div>
                     <div class="col-lg-6 px-5 py-5">
                         <h3 class="orange-headings">{{ program.name }}</h3>
@@ -48,7 +49,7 @@
                 <!-- Content for Individual Section -->
                 <div class="row justify-content-center align-items-center bg-white {% if not loop.index is odd %} flex-lg-row-reverse {% endif %}">
                     <div class="col-lg-6 programs-image">
-                        <img src="{{ url_for('static', filename=program.image_file) }}" class="img-fluid" alt="{{ program.name }}">
+                        <img src="{{ url_for('static', filename=program.image_file) }}" class="img-fluid" alt="{{ program.image_description }}">
                     </div>
                     <div class="col-lg-6 px-5 py-5">
                         <h3 class="orange-headings">{{ program.name }}</h3>
