--- a/Templates/base.html
+++ b/Templates/base.html
@@ -6,6 +6,14 @@
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
+   <!-- Favicon links-->
+   <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='images/logos/apple-touch-icon.png') }}">
+   <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='images/logos/favicon-32x32.png') }}">
+   <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='images/logos/favicon-16x16.png') }}">
+   <link rel="manifest" href="/site.webmanifest">
+   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"> 
+   <meta name="msapplication-TileColor" content="#da532c">
+   <meta name="theme-color" content="#ffffff">
    
    <!-- Font Awesome Kit -->
    <script src="https://kit.fontawesome.com/4f671d628b.js" crossorigin="anonymous"></script>
@@ -14,7 +22,6 @@
        <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="{{ url_for('static', filename='CSS/styles.css') }}">
-    <link rel="icon" type="image/png" href="{{ url_for('static', filename='images/logos/favicon.PNG') }}">
     <title>Soundscapes Conservatory of Music</title>
 
 </head>
