--- a/Templates/base.html
+++ b/Templates/base.html
@@ -7,11 +7,11 @@
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
    <!-- Favicon links-->
-   <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='images/logos/apple-touch-icon.png') }}">
-   <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='images/logos/favicon-32x32.png') }}">
-   <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='images/logos/favicon-16x16.png') }}">
-   <link rel="manifest" href="/site.webmanifest">
-   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"> 
+   <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='images/logos/favicon-package/apple-touch-icon.png') }}">
+   <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='images/logos/favicon-package/favicon-32x32.png') }}">
+   <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='images/logos/favicon-package/favicon-16x16.png') }}">
+   <link rel="manifest" href="images/logos/favicon-package/site.webmanifest">
+   <link rel="mask-icon" href="images/logos/favicon-package/safari-pinned-tab.svg" color="#5bbad5"> 
    <meta name="msapplication-TileColor" content="#da532c">
    <meta name="theme-color" content="#ffffff">
    
