Updated paths to include /static prepended before every image and video path

--- a/templates/about.html
+++ b/templates/about.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<header class="about-hero-section bg-cover bg-no-repeat bg-center text-white d-flex justify-content-center align-items-center" style="background-image: url({{ url_for('static', filename='images/heroes/about-us-hero.jpg') }}); height: 75vh;">
+<header class="about-hero-section bg-cover bg-no-repeat bg-center text-white d-flex justify-content-center align-items-center" style="background-image: url({{ url_for('static', filename='static/images/heroes/about-us-hero.jpg') }}); height: 75vh;">
     <div class="hero-text text-center">
         <h1 class="display-2">About Us</h1>
         <span class="visually-hidden">A guitarist performing onstage under blue lighting, focusing intently on his red electric guitar.</span>
@@ -43,7 +43,7 @@
     </div>
 </section>
 
-<section id="about-us-page-image" style="background-image: url('{{ url_for('static', filename='images/about-us/community.png') }}'); background-size: cover; background-position: center right; min-height: 464px;" alt="A group photo of diverse faculty and students at Soundscapes Conservatory of Music, smiling and posing in an indoor setting. Some students are holding musical instruments such as a clarinet, a trumpet, and a violin.">
+<section id="about-us-page-image" style="background-image: url('{{ url_for('static', filename='static/images/about-us/community.png') }}'); background-size: cover; background-position: center right; min-height: 464px;" alt="A group photo of diverse faculty and students at Soundscapes Conservatory of Music, smiling and posing in an indoor setting. Some students are holding musical instruments such as a clarinet, a trumpet, and a violin.">
 </section>
 
 <section class="py-5" id="the-team">
@@ -65,7 +65,7 @@
             <!-- First Portrait -->
             <div class="col-md-6 col-lg-4 order-md-2 order-lg-1 py-4">
                 <div class="card admin-member">
-                  <img class="card-img-top" src="{{ url_for('static', filename='images/about-us/Nguyen.JPG') }}" alt="Dr. Elizabeth Nguyen smiling warmly, standing amidst lush green foliage, illuminated by sunlight.">
+                  <img class="card-img-top" src="{{ url_for('static', filename='static/images/about-us/Nguyen.JPG') }}" alt="Dr. Elizabeth Nguyen smiling warmly, standing amidst lush green foliage, illuminated by sunlight.">
                   <div class="py-0 card-body member-details" style="display:none;">
                     <div class="pb-1 card-body text-center">
                       <h5 class="card-title">Dr. Elizabeth Nguyen</h5>
@@ -80,7 +80,7 @@
             <!-- Second Portrait -->
             <div class="col-md-6 col-lg-4 col-sm-12 order-md-3 order-lg-3 py-4">
                 <div class="card admin-member">
-                    <img class="card-img-top" src="{{ url_for('static', filename='images/about-us/Feldman.JPG') }}" alt="Dr. Steven Feldman, Vice President, wearing glasses, dressed in a dark blazer over a white shirt and plaid tie, standing indoors with a window-lit background.">
+                    <img class="card-img-top" src="{{ url_for('static', filename='static/images/about-us/Feldman.JPG') }}" alt="Dr. Steven Feldman, Vice President, wearing glasses, dressed in a dark blazer over a white shirt and plaid tie, standing indoors with a window-lit background.">
                     <div class="py-0 card-body member-details" style="display:none;">
                       <div class="pb-1 card-body text-center">
                         <h5 class="card-title">Dr. Steve Feldman</h5>
