renamed JS to js, Images to images, CSS to css (case change)

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,11 +7,11 @@
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
    <!-- Favicon links-->
-   <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='static/images/logos/favicon-package/apple-touch-icon.png') }}">
-   <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='static/images/logos/favicon-package/favicon-32x32.png') }}">
-   <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='static/images/logos/favicon-package/favicon-16x16.png') }}">
-   <link rel="manifest" href="static/images/logos/favicon-package/site.webmanifest">
-   <link rel="mask-icon" href="static/images/logos/favicon-package/safari-pinned-tab.svg" color="#5bbad5"> 
+   <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='images/logos/favicon-package/apple-touch-icon.png') }}">
+   <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='images/logos/favicon-package/favicon-32x32.png') }}">
+   <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='images/logos/favicon-package/favicon-16x16.png') }}">
+   <link rel="manifest" href="images/logos/favicon-package/site.webmanifest">
+   <link rel="mask-icon" href="images/logos/favicon-package/safari-pinned-tab.svg" color="#5bbad5"> 
    <meta name="msapplication-TileColor" content="#da532c">
    <meta name="theme-color" content="#ffffff">
    
@@ -33,7 +33,7 @@
                 <div class="container-fluid d-flex p-0">
                     <!-- Logo and Brand Name combined in one link -->
                     <div class="navbar-brand d-flex align-items-center">
-                        <a href="/"><img src="{{ url_for('static', filename='static/images/logos/sccm_logo.png') }}" alt="Company Logo, SCCM" class="img-fluid"></a>
+                        <a href="/"><img src="{{ url_for('static', filename='images/logos/sccm_logo.png') }}" alt="Company Logo, SCCM" class="img-fluid"></a>
                     </div>
                     <div class="navbar-brand d-flex align-items-center mx-0">
                         <div><h4 class="school-name">Soundscapes Conservatory <span>of Music</span></h4></div>
@@ -126,7 +126,7 @@
                 <div class="row">
                     <!-- Logo / Address -->
                     <div class="col-md-3 mb-3">
-                        <img src="{{ url_for('static', filename='static/images/logos/sccm_logo.png') }}" width="70" height="70" alt="Company Logo, SCCM" class="footer-logo">
+                        <img src="{{ url_for('static', filename='images/logos/sccm_logo.png') }}" width="70" height="70" alt="Company Logo, SCCM" class="footer-logo">
                         <p class="mt-2">50 School Lane <br> Brooklyn, NY 11236</p>
                     </div>
         
