--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
     <!-- Video Hero -->
 <div class="hero-video-container">
     <video autoplay loop muted poster="{{ url_for('static', filename='heroes/woman-playing-violin-poster.PNG') }}" id="hero-video">
-        <source src="{{ url_for('static', filename='static/videos/woman-playing-violin.mp4') }}" type="video/mp4"/>
+        <source src="{{ url_for('static', filename='videos/woman-playing-violin.mp4') }}" type="video/mp4"/>
     </video>
         <div class="video-overlay d-flex justify-content-center align-items-center">
             <div class="overlay-text-container text-white">
@@ -30,7 +30,7 @@
 
 <div class="row justify-content-center align-items-center pastel-background">
     <div class="col-lg-6 why-sscm-section align-self-stretch position-relative p-0">
-        <img src="{{ url_for('static', filename='static/images/heroes/why-sccm.PNG') }}" class="img-fluid w-100 h-100" alt="A young girl with curly red hair, wearing a blue dress, intently plays a violin while seated on a wooden chair against a white background." style="object-fit: cover;">
+        <img src="{{ url_for('static', filename='images/heroes/why-sccm.PNG') }}" class="img-fluid w-100 h-100" alt="A young girl with curly red hair, wearing a blue dress, intently plays a violin while seated on a wooden chair against a white background." style="object-fit: cover;">
         <div class="sccm-text-overlay position-absolute align-items-center p-5">
             <h1 class="orange-headings pb-4">Cultivating Excellence</h1>
             <p class="px-5">Soundscapes Conservatory of Music has become a beacon of music education in Brooklyn since its establishment in 1981. Committed to excellence, SCCM offers high quality musical education with a blend of traditional and modern approaches for students of all levels and ages.</p>
