updated file path for CSS to css in base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
    <meta charset="UTF-8">
        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="{{ url_for('static', filename='CSS/styles.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
     <title>Soundscapes Conservatory of Music</title>
 
 </head>
