fixed .image_file for all images (case change)

--- a/templates/about.html
+++ b/templates/about.html
@@ -65,7 +65,7 @@
             <!-- First Portrait -->
             <div class="col-md-6 col-lg-4 order-md-2 order-lg-1 py-4">
                 <div class="card admin-member">
-                  <img class="card-img-top" src="{{ url_for('static', filename='images/about-us/Nguyen.JPG') }}" alt="Dr. Elizabeth Nguyen smiling warmly, standing amidst lush green foliage, illuminated by sunlight.">
+                  <img class="card-img-top" src="{{ url_for('static', filename='images/about-us/Nguyen.jpg') }}" alt="Dr. Elizabeth Nguyen smiling warmly, standing amidst lush green foliage, illuminated by sunlight.">
                   <div class="py-0 card-body member-details" style="display:none;">
                     <div class="pb-1 card-body text-center">
                       <h5 class="card-title">Dr. Elizabeth Nguyen</h5>
@@ -80,7 +80,7 @@
             <!-- Second Portrait -->
             <div class="col-md-6 col-lg-4 col-sm-12 order-md-3 order-lg-3 py-4">
                 <div class="card admin-member">
-                    <img class="card-img-top" src="{{ url_for('static', filename='images/about-us/Feldman.JPG') }}" alt="Dr. Steven Feldman, Vice President, wearing glasses, dressed in a dark blazer over a white shirt and plaid tie, standing indoors with a window-lit background.">
+                    <img class="card-img-top" src="{{ url_for('static', filename='images/about-us/Feldman.jpg') }}" alt="Dr. Steven Feldman, Vice President, wearing glasses, dressed in a dark blazer over a white shirt and plaid tie, standing indoors with a window-lit background.">
                     <div class="py-0 card-body member-details" style="display:none;">
                       <div class="pb-1 card-body text-center">
                         <h5 class="card-title">Dr. Steve Feldman</h5>
