--- a/templates/home.html
+++ b/templates/home.html
@@ -30,7 +30,7 @@
 
 <div class="row justify-content-center align-items-center pastel-background">
     <div class="col-lg-6 why-sscm-section align-self-stretch position-relative p-0">
-        <img src="{{ url_for('static', filename='images/heroes/why-sccm.PNG') }}" class="img-fluid w-100 h-100" alt="A young girl with curly red hair, wearing a blue dress, intently plays a violin while seated on a wooden chair against a white background." style="object-fit: cover;">
+        <img src="{{ url_for('static', filename='images/heroes/why-sccm.png') }}" class="img-fluid w-100 h-100" alt="A young girl with curly red hair, wearing a blue dress, intently plays a violin while seated on a wooden chair against a white background." style="object-fit: cover;">
         <div class="sccm-text-overlay position-absolute align-items-center p-5">
             <h1 class="orange-headings pb-4">Cultivating Excellence</h1>
             <p class="px-5">Soundscapes Conservatory of Music has become a beacon of music education in Brooklyn since its establishment in 1981. Committed to excellence, SCCM offers high quality musical education with a blend of traditional and modern approaches for students of all levels and ages.</p>
